Implement ops agent and admin operations UI baseline

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,7 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/1
-ENABLE_OPS_AGENT=no
+ENABLE_OPS_AGENT=false
+OPS_AGENT_TOKEN=change-me-ops-token
+OPS_AGENT_URL=http://ops:8091
 COMPOSE_PROFILES=
