--- a/docker/ops/Dockerfile
+++ b/docker/ops/Dockerfile
@@ -1,2 +1,11 @@
-FROM alpine:3.20
-CMD ["sh", "-c", "echo 'Ops agent placeholder disabled by default'; tail -f /dev/null"]
+FROM python:3.12-alpine
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+WORKDIR /app
+COPY docker/ops/requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
+COPY docker/ops/main.py /app/main.py
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8091"]
