Add scan reporting and internal PDF rendering service

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ ENABLE_OPS_AGENT=false
 OPS_AGENT_TOKEN=change-me-ops-token
 OPS_AGENT_URL=http://ops:8091
 COMPOSE_PROFILES=
+
+PDF_SERVICE_URL=http://pdf:8092
