--- a/docker/pdf/Dockerfile
+++ b/docker/pdf/Dockerfile
@@ -1,3 +1,11 @@
-FROM alpine:3.20
-RUN apk add --no-cache wkhtmltopdf
-CMD ["sh", "-c", "echo 'PDF service placeholder running'; tail -f /dev/null"]
+FROM python:3.12-alpine
+
+RUN apk add --no-cache wkhtmltopdf ttf-dejavu fontconfig
+
+WORKDIR /app
+COPY docker/pdf/requirements.txt ./requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+COPY docker/pdf/app.py ./app.py
+
+EXPOSE 8092
+CMD ["python", "app.py"]
