--- a/docker/pdf/Dockerfile
+++ b/docker/pdf/Dockerfile
@@ -1,6 +1,11 @@
-FROM python:3.12-alpine
+FROM python:3.12-slim
 
-RUN apk add --no-cache wkhtmltopdf ttf-dejavu fontconfig
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        wkhtmltopdf \
+        fonts-dejavu-core \
+        fontconfig \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 COPY docker/pdf/requirements.txt ./requirements.txt
