--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,17 @@ services:
 
   zap:
     image: zaproxy/zap-stable
-    command: ["zap.sh", "-daemon", "-host", "0.0.0.0", "-port", "8090", "-config", "api.disablekey=true", "-config", "api.addrs.addr.name=.*", "-config", "api.addrs.addr.regex=true"]
+    environment:
+      ZAP_API_KEY: ${ZAP_API_KEY:-change-me-zap-key}
+    command:
+      - /bin/sh
+      - -lc
+      - >-
+        zap.sh -daemon -host 0.0.0.0 -port 8090
+        -config api.disablekey=false
+        -config "api.key=$${ZAP_API_KEY}"
+        -config api.addrs.addr.name=.*
+        -config api.addrs.addr.regex=true
     expose:
       - "8090"
     restart: unless-stopped
