Fix ZAP container startup command path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
       - /bin/sh
       - -lc
       - >-
-        zap.sh -daemon -host 0.0.0.0 -port 8090
+        /zap/zap.sh -daemon -host 0.0.0.0 -port 8090
         -config api.disablekey=false
         -config "api.key=$${ZAP_API_KEY}"
         -config api.addrs.addr.name=.*
